Fix handkaart alignment???

--- a/src/Machiavelli/Resources/style.css
+++ b/src/Machiavelli/Resources/style.css
@@ -94,6 +94,8 @@
     -fx-fill: #FFFFFF;
     -fx-font-size: 2em;
     -fx-effect: dropshadow(three-pass-box, black, 1, 1.0, 1, 1);
+    -fx-translate-x: -6;
+    -fx-translate-y: 8;
 }
 
 .gebouwkaart {
